--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=testApp
+
+POSTGRES.name = user
+POSTGRES.password = password
+POSTGRES.url = awd
+POSTGRES.driver = awduawduyawd
