--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,26 @@
 spring.application.name=testApp
 
-POSTGRES.name = user
-POSTGRES.password = password
-POSTGRES.url = awd
-POSTGRES.driver = awduawduyawd
+#Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+
+#Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/pokemontestdatabase
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hikari Connection Pool (default Spring Boot connection pool)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+
+# JPA/Hibernate configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+# Disabling docker compose
+spring.docker.compose.enabled=false
