object saving and redirects

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+
 
 #Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/pokemontestdatabase
